--- a/css/style.css
+++ b/css/style.css
@@ -903,7 +903,7 @@ select{
 }
 /* -------------- b-advantages -------------- */
 .b-advantages{
-	background: url("../images/adv-bg.jpg") center top no-repeat;
+	background: url("../images/abg.jpg") center top no-repeat;
 	background-size: cover;
 	padding: 70px 0;
 	-webkit-box-sizing: border-box;
