--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,14 @@ select{
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	/*background: rgba(242, 240, 243, 0.9);*/
+	transition: 0.3s;
+}
+.b-header.header-fix{
+	position: fixed;
+	background: rgba(242, 240, 243, 0.95);
+	transition: 0.3s;
+	padding: 10px 0;
+	transition: 0.3s;
 }
 .b-logo{
 	display: block;
@@ -822,7 +830,7 @@ select{
 	display: flex;
 	flex-direction: column;
 }
-.b-products > .container > .row > div{
+.b-product__col{
 	margin-bottom: 20px;
 }
 .b-product__wrap{
@@ -1224,9 +1232,6 @@ select{
 	opacity: 0.7;
 	transition: 0.3s;
 }
-
-
-
 	/* -------------- modal -------------- */
 .modal-overlay{
 	position: fixed;
@@ -1293,4 +1298,7 @@ select{
 	font-size: 15px;
 	line-height: 1.2;
 	color: #333333;
+}
+.hide-block{
+	display: none;
 }
